--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 
+* Options for ddf_java_package. Currently a "comment" in the .proto file 
 * includes and java (refer to external types)
 * Empty arrays
 * Messages in messages
