Added more error messages and tests. ref #671

--- a/com.dynamo.cr.tileeditor/src/com/dynamo/cr/tileeditor/core/messages.properties
+++ b/com.dynamo.cr.tileeditor/src/com/dynamo/cr/tileeditor/core/messages.properties
@@ -4,6 +4,8 @@ TileSetModel_TAG_3=The specified collision image {0} could not be found
 TileSetModel_TAG_4=Both the image and the collision image must have the same dimensions ({0}x{1} vs {2}x{3})
 TileSetModel_TAG_5=Tile width must be above 0
 TileSetModel_TAG_6=Tile height must be above 0
-TileSetModel_TAG_7=The specified tile width is greater than the image width, which is {0}
-TileSetModel_TAG_8=The specified tile height is greater than the image height, which is {0}
+TileSetModel_TAG_7=The total tile width (including margin) is greater than the image width ({0} vs {1})
+TileSetModel_TAG_8=The total tile height (including margin) is greater than the image height ({0} vs {1})
 TileSetModel_TAG_9=No material tag has been specified
+TileSetModel_TAG_10=Tile margin must be 0 or above
+TileSetModel_TAG_11=Tile spacing must be 0 or above
