--- a/com.dynamo.cr.tileeditor/src/com/dynamo/cr/tileeditor/core/messages.properties
+++ b/com.dynamo.cr.tileeditor/src/com/dynamo/cr/tileeditor/core/messages.properties
@@ -1,11 +1,11 @@
-TileSetModel_TAG_1=No image has been specified
-TileSetModel_TAG_2=The specified image {0} could not be found
-TileSetModel_TAG_3=The specified collision image {0} could not be found
-TileSetModel_TAG_4=Both the image and the collision image must have the same dimensions ({0}x{1} vs {2}x{3})
-TileSetModel_TAG_5=Tile width must be above 0
-TileSetModel_TAG_6=Tile height must be above 0
-TileSetModel_TAG_7=The total tile width (including margin) is greater than the image width ({0} vs {1})
-TileSetModel_TAG_8=The total tile height (including margin) is greater than the image height ({0} vs {1})
-TileSetModel_TAG_9=No material tag has been specified
-TileSetModel_TAG_10=Tile margin must be 0 or above
-TileSetModel_TAG_11=Tile spacing must be 0 or above
+TS_IMG_NOT_SPECIFIED=No image has been specified
+TS_IMG_NOT_FOUND=The specified image {0} could not be found
+TS_COL_IMG_NOT_FOUND=The specified collision image {0} could not be found
+TS_DIFF_IMG_DIMS=Both the image and the collision image must have the same dimensions ({0}x{1} vs {2}x{3})
+TS_INVALID_TILE_WIDTH=Tile width must be above 0
+TS_INVALID_TILE_HEIGHT=Tile height must be above 0
+TS_TILE_WIDTH_GT_IMG=The total tile width (including margin) is greater than the image width ({0} vs {1})
+TS_TILE_HEIGHT_GT_IMG=The total tile height (including margin) is greater than the image height ({0} vs {1})
+TS_MAT_NOT_SPECIFIED=No material tag has been specified
+TS_INVALID_TILE_MGN=Tile margin must be 0 or above
+TS_INVALID_TILE_SPCN=Tile spacing must be 0 or above
