GridTest updates * Added code to message mapping * Activator#getStatusMessage now throws an exception if no mapping is found * Extended unit test to check message * Added positive test after all negative

--- a/com.dynamo.cr.tileeditor/src/com/dynamo/cr/tileeditor/core/messages.properties
+++ b/com.dynamo.cr.tileeditor/src/com/dynamo/cr/tileeditor/core/messages.properties
@@ -9,3 +9,9 @@ TS_TILE_HEIGHT_GT_IMG=The total tile height (including margin) is greater than t
 TS_MAT_NOT_SPECIFIED=No material tag has been specified
 TS_INVALID_TILE_MGN=Tile margin must be 0 or above
 TS_INVALID_TILE_SPCN=Tile spacing must be 0 or above
+GRID_TS_NOT_SPECIFIED=Tile set not specified
+GRID_TS_NOT_FOUND=Tile set not found
+GRID_INVALID_TILESET=Invalid tile set
+GRID_INVALID_CELL_WIDTH=Invalid cell width
+GRID_INVALID_CELL_HEIGHT=Invalid cell height
+GRID_DUPLICATED_LAYER_IDS=Duplicated layers ids
