--- a/com.dynamo.cr.tileeditor/src/com/dynamo/cr/tileeditor/core/messages.properties
+++ b/com.dynamo.cr.tileeditor/src/com/dynamo/cr/tileeditor/core/messages.properties
@@ -1,17 +1,19 @@
-TS_IMG_NOT_SPECIFIED=No image has been specified
-TS_IMG_NOT_FOUND=The specified image ''{0}'' could not be found
-TS_COL_IMG_NOT_FOUND=The specified collision image ''{0}'' could not be found
+TileSetModel_ResourceValidator_image_NOT_SPECIFIED=No image has been specified
+TileSetModel_ResourceValidator_image_NOT_FOUND=The specified image ''{0}'' could not be found
+TileSetModel_ResourceValidator_collision_NOT_SPECIFIED=No collision image has been specified
+TileSetModel_ResourceValidator_collision_NOT_FOUND=The specified collision image ''{0}'' could not be found
+TileSetModel_RangeValidator_tileWidth=Tile width must be above 0
+TileSetModel_RangeValidator_tileHeight=Tile height must be above 0
+TileSetModel_RangeValidator_tileMargin=Tile margin must be 0 or above
+TileSetModel_RangeValidator_tileSpacing=Tile spacing must be 0 or above
+TileSetModel_NotEmptyValidator_materialTag=No material tag has been specified
+
+GridModel_ResourceValidator_tileSet_NOT_FOUND=Tile set ''{0}'' not found
+GridModel_ResourceValidator_tileSet_NOT_SPECIFIED=Tile set not specified
+
 TS_DIFF_IMG_DIMS=Both the image and the collision image must have the same dimensions ({0}x{1} vs {2}x{3})
-TS_INVALID_TILE_WIDTH=Tile width must be above 0
-TS_INVALID_TILE_HEIGHT=Tile height must be above 0
 TS_TILE_WIDTH_GT_IMG=The total tile width (including margin) is greater than the image width ({0} vs {1})
 TS_TILE_HEIGHT_GT_IMG=The total tile height (including margin) is greater than the image height ({0} vs {1})
-TS_MAT_NOT_SPECIFIED=No material tag has been specified
-TS_INVALID_TILE_MGN=Tile margin must be 0 or above
-TS_INVALID_TILE_SPCN=Tile spacing must be 0 or above
-GRID_TS_NOT_SPECIFIED=Tile set not specified
-GRID_TS_NOT_FOUND=Tile set ''{0}'' not found
 GRID_INVALID_TILESET=Invalid tile set
-GRID_INVALID_CELL_WIDTH=Invalid cell width
-GRID_INVALID_CELL_HEIGHT=Invalid cell height
 GRID_DUPLICATED_LAYER_IDS=Duplicated layers ids
+
