Fixed messages for component ids. case 284

--- a/com.dynamo.cr.sceneed/src/com/dynamo/cr/sceneed/core/messages.properties
+++ b/com.dynamo.cr.sceneed/src/com/dynamo/cr/sceneed/core/messages.properties
@@ -1,2 +1,5 @@
 NodeModel_ResourceValidator_tileSet_NOT_FOUND=Tile set ''{0}'' not found
 NodeModel_ResourceValidator_tileSet_NOT_SPECIFIED=Tile set not specified
+
+ComponentNode_id_NOT_SPECIFIED=Every component must have an id
+ComponentNode_id_DUPLICATED=''{0}'' is in use by another component
