Fixed more referenced component messages and status propagation between nodes. cases 285, 289
Messy commit, includes many changes:
* More message tests
* Some naming changes for the loading-functions in NodePresenter. This area is still needs messy and needs to be revised again.
* All nodes now have access to a presenter. Only needed to update the subnodes of referenced component nodes atm (i.e. when the component-field is updated, we need to recreate the nodes below to match the new file)
* Fixed previous failing tests by making sure the component id sorting only updates view when the sort resulted in a change to the component list.
* Node validation by recursively validate the nodes (case 289), needed for detecting errors in referenced components
* Hid the sub nodes to referenced component nodes, since they caused many bugs by exposing the properties of the referenced nodes, which should ideally be displayed but non-editable. No support for this yet in the property system.

--- a/com.dynamo.cr.sceneed/src/com/dynamo/cr/sceneed/core/messages.properties
+++ b/com.dynamo.cr.sceneed/src/com/dynamo/cr/sceneed/core/messages.properties
@@ -6,3 +6,7 @@ NodeModel_ResourceValidator_component_NOT_SPECIFIED=Component not specified
 
 ComponentNode_id_NOT_SPECIFIED=Every component must have an id
 ComponentNode_id_DUPLICATED=''{0}'' is in use by another component
+
+RefComponentNode_component_INVALID_REFERENCE=The component contains unresolved issues
+RefComponentNode_component_INVALID_TYPE=Files with extension ''{0}'' are not components
+RefComponentNode_component_UNKNOWN_TYPE=''{0}'' is an unknown file type
