Added gradient background to scene editor. case 288
The gradient is configurable in through preferences.

--- a/com.dynamo.cr.sceneed.ui/src/com/dynamo/cr/sceneed/ui/messages.properties
+++ b/com.dynamo.cr.sceneed.ui/src/com/dynamo/cr/sceneed/ui/messages.properties
@@ -10,3 +10,6 @@ ComponentNode_id_DUPLICATED=''{0}'' is in use by another component
 RefComponentNode_component_INVALID_REFERENCE=The component contains unresolved issues
 RefComponentNode_component_INVALID_TYPE=Files with extension ''{0}'' are not components
 RefComponentNode_component_UNKNOWN_TYPE=''{0}'' is an unknown file type
+
+PreferencePage_TopBkgdColor=Top Background Color
+PreferencePage_BottomBkgdColor=Bottom Background Color
