TileSet port to SceneEd. case 393
* Introduced CollisionGroupIndexPool singleton to handle existing collision groups in tile set (with tests)
* Tests for collision group specific colors
* Added message for collision group overflow
* Collision group icons are managed by activator to avoid leaks (which also manages colors)

--- a/com.dynamo.cr.tileeditor/src/com/dynamo/cr/tileeditor/scene/messages.properties
+++ b/com.dynamo.cr.tileeditor/src/com/dynamo/cr/tileeditor/scene/messages.properties
@@ -11,6 +11,8 @@ TileSetNode_DIFF_IMG_DIMS=Both the image and the collision image must have the s
 TileSetNode_TILE_WIDTH_GT_IMG=The total tile width (including margin) is greater than the image width ({0} vs {1})
 TileSetNode_TILE_HEIGHT_GT_IMG=The total tile height (including margin) is greater than the image height ({0} vs {1})
 
+CollisionGroupNode_name_OVERFLOW=The total number of collision groups ({0}) has been exceeded
+
 TileGridNode_tileSet_EMPTY=Tile set not specified
 
 Sprite2Node_tileSet_INVALID_REFERENCE=The tile set has unresolved issues
