Removed Node#notifyChange. case 407
* Inequality-checking and notifyChange in setters not needed anymore
* handleReload signature changed to return boolean, change notification handle in SceneModel
* User-dialog-selection initiated through IPresenterContext, different options:
    - selectFromList
    - selectFromArray
    - selectFile
* ISceneModel#setUndoRedoCounter replaced by isDirty/clearDirty
* Unified ISceneView#(updateNode/updateSelection/setDirty) to refresh

--- a/com.dynamo.cr.go/src/com/dynamo/cr/go/core/messages.properties
+++ b/com.dynamo.cr.go/src/com/dynamo/cr/go/core/messages.properties
@@ -1,3 +1,7 @@
+GameObjectPresenter_ADD_COMPONENT="Add Component"
+GameObjectPresenter_ADD_COMPONENT_FROM_FILE=
+GameObjectPresenter_SELECT_COMPONENT_TYPE="Select a component type:"
+
 ComponentNode_id_EMPTY=Every component must have an id
 ComponentNode_id_DUPLICATED=''{0}'' is in use by another component
 
