Add Animation Test. case 343
* Added getUniqueId for list and made it generic
* Added GroupNode to name and collect nodes of similar types ("Animations")
  - Also applied to CollisionGroupNode
* AddAnimationOperation with tests
* Also fixed editor to work as usual with new groups
* Also fixed erase tiles which was broken on presenter level (and test)

--- a/com.dynamo.cr.tileeditor/src/com/dynamo/cr/tileeditor/scene/messages.properties
+++ b/com.dynamo.cr.tileeditor/src/com/dynamo/cr/tileeditor/scene/messages.properties
@@ -1,3 +1,6 @@
+CollisionGroupGroupNode_label=Collision Groups
+AnimationGroupNode_label=Animations
+
 TileSetNode_image_EMPTY=No image has been specified
 TileSetNode_image_NOT_FOUND=The specified image ''{0}'' could not be found
 TileSetNode_collision_EMPTY=No collision image has been specified
