Animation messages and tests. case 346

--- a/com.dynamo.cr.tileeditor/src/com/dynamo/cr/tileeditor/scene/messages.properties
+++ b/com.dynamo.cr.tileeditor/src/com/dynamo/cr/tileeditor/scene/messages.properties
@@ -16,6 +16,9 @@ TileSetNode_TILE_HEIGHT_GT_IMG=The total tile height (including margin) is great
 
 CollisionGroupNode_id_OVERFLOW=The total number of different collision group ids ({0}) has been exceeded
 
+AnimationNode_startTile_INVALID=The start tile is outside the tile range (1-{0})
+AnimationNode_endTile_INVALID=The end tile is outside the tile range (1-{0})
+
 TileGridNode_tileSet_EMPTY=Tile set not specified
 
 Sprite2Node_tileSet_INVALID_REFERENCE=The tile set has unresolved issues
