Invalid default animation for sprite. case 425
* Added AbstractNodeTest#registerLoadedNode for temporary test nodes
* Changed Sprite2 to use proper TileSetNode instead of TileSetModel for internal validation
* Added validation for valid default animation
* Added validation for correct tileset type (tileset2)

--- a/com.dynamo.cr.tileeditor/src/com/dynamo/cr/tileeditor/scene/messages.properties
+++ b/com.dynamo.cr.tileeditor/src/com/dynamo/cr/tileeditor/scene/messages.properties
@@ -1,5 +1,5 @@
 CollisionGroupGroupNode_label=Collision Groups
-AnimationGroupNode_label=Animations
+AnimationNode_label=Animations
 
 TileSetNode_image_EMPTY=No image has been specified
 TileSetNode_image_NOT_FOUND=The specified image ''{0}'' could not be found
@@ -22,4 +22,6 @@ AnimationNode_endTile_INVALID=The end tile is outside the tile range (1-{0})
 TileGridNode_tileSet_EMPTY=Tile set not specified
 
 Sprite2Node_tileSet_INVALID_REFERENCE=The tile set has unresolved issues
+Sprite2Node_tileSet_INVALID_TYPE=Only files with extension 'tileset2' can be specified
 Sprite2Node_defaultAnimation_EMPTY=No default animation
+Sprite2Node_defaultAnimation_INVALID=The animation ''{0}'' could not be found in the specified tile set
