--- a/com.dynamo.cr.tileeditor/src/com/dynamo/cr/tileeditor/scene/messages.properties
+++ b/com.dynamo.cr.tileeditor/src/com/dynamo/cr/tileeditor/scene/messages.properties
@@ -22,6 +22,6 @@ AnimationNode_endTile_INVALID=The end tile is outside the tile range (1-{0})
 TileGridNode_tileSet_EMPTY=Tile set not specified
 
 Sprite2Node_tileSet_INVALID_REFERENCE=The tile set has unresolved issues
-Sprite2Node_tileSet_INVALID_TYPE=Only files with extension 'tileset2' can be specified
+Sprite2Node_tileSet_INVALID_TYPE=Only files with extension 'tileset' can be specified
 Sprite2Node_defaultAnimation_EMPTY=No default animation
 Sprite2Node_defaultAnimation_INVALID=The animation ''{0}'' could not be found in the specified tile set
