--- a/com.dynamo.cr.sceneed/src/com/dynamo/cr/sceneed/ui/messages.properties
+++ b/com.dynamo.cr.sceneed/src/com/dynamo/cr/sceneed/ui/messages.properties
@@ -1,2 +1,7 @@
 PreferencePage_TopBkgdColor=Top Background Color
 PreferencePage_BottomBkgdColor=Bottom Background Color
+PreferencePage_Grid=Grid
+PreferencePage_GridSize=Grid Size
+PreferencePage_GridAutoValue=Auto
+PreferencePage_GridManualValue=Manual
+PreferencePage_GridColor=Grid Color
