--- a/com.dynamo.cr.sceneed/src/com/dynamo/cr/sceneed/ui/messages.properties
+++ b/com.dynamo.cr.sceneed/src/com/dynamo/cr/sceneed/ui/messages.properties
@@ -5,3 +5,4 @@ PreferencePage_GridSize=Grid Size
 PreferencePage_GridAutoValue=Auto
 PreferencePage_GridManualValue=Manual
 PreferencePage_GridColor=Grid Color
+PreferencePage_SelectionColor=Selection Color
