Handled multi selection for all handlers/operations in sceneed. case 637

--- a/com.dynamo.cr.go/src/com/dynamo/cr/go/core/messages.properties
+++ b/com.dynamo.cr.go/src/com/dynamo/cr/go/core/messages.properties
@@ -1,8 +1,8 @@
-GameObjectPresenter_ADD_COMPONENT="Add Component"
-GameObjectPresenter_ADD_COMPONENT_FROM_FILE="Add Component From File"
+GameObjectPresenter_ADD_COMPONENT=Add Component
+GameObjectPresenter_ADD_COMPONENT_FROM_FILE=Add Component From File
 GameObjectPresenter_SELECT_COMPONENT_TYPE="Select a component type:"
 
-CollectionPresenter_ADD_GAME_OBJECT="Add Game Object"
+CollectionPresenter_ADD_GAME_OBJECT=Add Game Object
 CollectionPresenter_ADD_SUB_COLLECTION="Add Collection"
 
 ComponentNode_id_EMPTY=Every component must have an id
