--- a/com.dynamo.cr.tileeditor/src/com/dynamo/cr/tileeditor/scene/messages.properties
+++ b/com.dynamo.cr.tileeditor/src/com/dynamo/cr/tileeditor/scene/messages.properties
@@ -19,6 +19,6 @@ AnimationNode_endTile_INVALID=The end tile is outside the tile range (1-{0})
 TileGridNode_tileSet_EMPTY=Tile set not specified
 
 SpriteNode_tileSet_INVALID_REFERENCE=The tile set has unresolved issues
-SpriteNode_tileSet_INVALID_TYPE=Only files with extension 'tileset' can be specified
+SpriteNode_tileSet_CONTENT_ERROR=The tile set could not be loaded
 SpriteNode_defaultAnimation_EMPTY=No default animation
 SpriteNode_defaultAnimation_INVALID=The animation ''{0}'' could not be found in the specified tile set
