--- a/com.dynamo.cr.tileeditor/src/com/dynamo/cr/tileeditor/core/messages.properties
+++ b/com.dynamo.cr.tileeditor/src/com/dynamo/cr/tileeditor/core/messages.properties
@@ -8,11 +8,11 @@ TileSetModel_tileMargin_OUTSIDE_RANGE=Tile margin must be 0 or above
 TileSetModel_tileSpacing_OUTSIDE_RANGE=Tile spacing must be 0 or above
 TileSetModel_materialTag_EMPTY=No material tag has been specified
 
-GridModel_tileSet_NOT_FOUND=Tile set ''{0}'' not found
-GridModel_tileSet_EMPTY=Tile set not specified
+GridModel_tileSource_NOT_FOUND=Tile source ''{0}'' not found
+GridModel_tileSource_EMPTY=Tile source not specified
 
 TS_DIFF_IMG_DIMS=Both the image and the collision image must have the same dimensions ({0}x{1} vs {2}x{3})
 TS_TILE_WIDTH_GT_IMG=The total tile width (including margin) is greater than the image width ({0} vs {1})
 TS_TILE_HEIGHT_GT_IMG=The total tile height (including margin) is greater than the image height ({0} vs {1})
-GRID_INVALID_TILESET=Invalid tile set
+GRID_INVALID_TILESET=Invalid tile source
 GRID_DUPLICATED_LAYER_IDS=Duplicated layers ids
