Changed links from hash to hash-bang. case 858 * Fixed all links * Skip analytics when running locally * Updated CrawlFilter * login and opened kept as is. Google should not crawl them * Enabled threading in app-engine * Reverted defold-change in CrawlingTask (hash-bang)

--- a/com.dynamo.cr.webcrawler/README
+++ b/com.dynamo.cr.webcrawler/README
@@ -10,7 +10,7 @@ How to update the crawler:
 
 
 # fetch blog from crawler
-curl 'http://defoldcrawler.appspot.com/ajaxcrawler?url=http://www.defold.com%2f%23blog:'
+curl 'http://defoldcrawler.appspot.com/ajaxcrawler?url=http://www.defold.com%2f%23%21blog:'
 
 # fetch as google bot
 curl 'http://www.defold.com?_escaped_fragment_=blog:'
