Changed scene navigation to mouse type based (like maya). case 903

--- a/com.dynamo.cr.sceneed/src/com/dynamo/cr/sceneed/ui/messages.properties
+++ b/com.dynamo.cr.sceneed/src/com/dynamo/cr/sceneed/ui/messages.properties
@@ -6,3 +6,6 @@ PreferencePage_GridAutoValue=Auto
 PreferencePage_GridManualValue=Manual
 PreferencePage_GridColor=Grid Color
 PreferencePage_SelectionColor=Selection Color
+PreferencePage_MouseType=Mouse Type
+PreferencePage_MouseTypeOneValue=One Button
+PreferencePage_MouseTypeThreeValue=Three Buttons
