Reset of script properties. case 977

--- a/com.dynamo.cr/com.dynamo.cr.properties/src/com/dynamo/cr/properties/messages.properties
+++ b/com.dynamo.cr/com.dynamo.cr.properties/src/com/dynamo/cr/properties/messages.properties
@@ -1,3 +1,4 @@
+FormPropertySheetViewer_RESET_VALUE=Reset value
 NotEmptyValidator_EMPTY=Required field
 RangeValidator_OUTSIDE_RANGE=Outside range ({0}-{1})
 ResourceValidator_NOT_FOUND=''{0}'' could not be found
