--- a/com.dynamo.cr/com.dynamo.cr.editor/icons/launching/README
+++ b/com.dynamo.cr/com.dynamo.cr.editor/icons/launching/README
@@ -1,5 +1,1 @@
-Speed-icon stolen from: http://www.iconfinder.com/icondetails/15241/128/bandwidth_performance_speed_speedometer_icon
-with unknown license.
-
-icns-file created using an online tool: http://iconverticons.com/
-
+icns-file and ico-file created using an online tool: http://iconverticons.com/
